# Bulk-Cold-Email-Sender

./: Dockerfile  commands.txt  emailwhiz-supervisord.ini  employees_data_fetch_script.py  fetch_employees_emails_script.py  pyproject.toml
EmailWhiz/EmailWhiz/: auth_middleware.py  settings.py
EmailWhiz/emailwhiz_api/: abc.json  email_sender.py  models.py  urls.py  views.py
EmailWhiz/emailwhiz_api/send_emails/: send_cold_email_job.py
EmailWhiz/emailwhiz_api/users/bhuvan303/: history.json
EmailWhiz/emailwhiz_api/users/bhuvanthirwani/: Pakistan__Hardware.json  apollo_apis_details.json  history.json
EmailWhiz/emailwhiz_ui/: urls.py  views.py
EmailWhiz/emailwhiz_ui/templates/: base.html  create_companies_data.html  create_subject.html  email_generator.html  fetch_employees.html  jobs.html  list_resumes.html  login.html  register.html  select_companies.html  select_companies_dataset.html  send_cold_emails_through_apollo_emails.html  unlock_emails.html  update_apollo_apis.html
