[tool.poetry]
name = "emailwhiz"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.3"
djangorestframework = "^3.15.2"
pypdf2 = "^3.0.1"
pytz = "^2024.2"
google-generativeai = "^0.8.3"
pymongo = "^4.10.1"
django-sslserver = "^0.22"
bcrypt = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
